# Detectar-Patrones-en-varios-archivos

./: .gitignore  CMakeLists.txt  README.md  README_OLD.md
algoritmos/: automata.cpp  automata.h  boyer_moore.cpp  boyer_moore.h  kmp.cpp  kmp.h  rabin_karp.cpp  rabin_karp.h
comparador/: bench.cpp  experimental_bench.cpp  main.cpp
datos/documentos/: D1.txt  D10.txt  D11.txt  D12.txt  D13.txt  D14.txt  D15.txt  D16.txt  D17.txt  D18.txt  D19.txt  D2.txt  D20.txt  D21.txt  D22.txt  D23.txt  D24.txt  D25.txt  D26.txt  D27.txt  D28.txt  D29.txt  D3.txt  D30.txt  D31.txt  D32.txt  D33.txt  D34.txt  D35.txt  D36.txt  D37.txt  D38.txt  D39.txt  D4.txt  D40.txt  D41.txt  D42.txt  D43.txt  D44.txt  D45.txt  (+10 more)
datos/patrones/: patrones_100.txt  patrones_150.txt  patrones_200.txt  patrones_250.txt  patrones_50.txt
estructuras/: suffix_array.cpp  suffix_array.h
resultados/: salida.csv
scripts/: build.sh
utils/: io.cpp  io.h  utils.cpp
